--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "13.4.7",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
