--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "quotes": [2, "single", { "avoidEscape": true }],
     "prettier/prettier": [
       "error",
       {
